2012f/test/correct/functionParam.c1
void f1(int a){
	write(a);    write("\n");
	return;
}
void f2(bool b){
	write(b);    write("\n");
	return;
}

int main(){
	
	f1(10);    
	f2(true);
	return 1;
}