2012f/test/error/ArrayPrint.c1
void Main() {
	int a[10], b[10];
	int i;

	write(a);
	i=i+a;
	i=a[12];
	return;
}